tests/grammar/datatype/str_interpolation/invalid_format_value_fail_0/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:2:8
  |
2 | b = "${b = a + 1}"
  |        ^ invalid string interpolation expression: 'b = a + 1'
  |